# faultier_glitchtag_projects

./: .gitignore  README.md  pyproject.toml  west.yml
apps/: README.md
apps/blx_characterization/: CMakeLists.txt  testcase.yaml
apps/bx_characterization/: CMakeLists.txt  prj.conf  testcase.yaml
apps/conditional_characterization/: CMakeLists.txt  testcase.yaml
apps/countermeasure_delays/: CMakeLists.txt  prj.conf  testcase.yaml
apps/countermeasure_double_read/: CMakeLists.txt  prj.conf  testcase.yaml
apps/countermeasure_secbool/: CMakeLists.txt  prj.conf  testcase.yaml
apps/firmware_print_glitch/: CMakeLists.txt  prj.conf  testcase.yaml
apps/ldm_characterization/: CMakeLists.txt  prj.conf  testcase.yaml
apps/ldm_characterization/src/: ldm_characterization.c
blx_characterization/: CMakeLists.txt  prj.conf
bx_characterization/: CMakeLists.txt
cmake/: export_compile_commands.cmake
common/: CMakeLists.txt  gpio.c  gpio.h  uart.c  uart.h
conditional_characterization/: prj.conf
countermeasure_delays/: CMakeLists.txt
countermeasure_double_read/: CMakeLists.txt
countermeasure_secbool/: CMakeLists.txt
firmware_print_glitch/: CMakeLists.txt
int_characterization_basic/: CMakeLists.txt
ldm_characterization/: CMakeLists.txt
ldm_exploit_characterization/: CMakeLists.txt
mov_characterization_all_registers/: CMakeLists.txt
mov_characterization_basic/: glitcher.ipynb
mov_characterization_full/: glitcher.ipynb  prj.conf
password_glitch/: CMakeLists.txt
scripts/: obfuscate.py
simple_glitch/: CMakeLists.txt
zephyr/: module.yml
(+70 files in other folders)
